8254836: Cherry pick GTK WebKit 2.30.3 changes